2011-07-06 Harri Pitkänen <hatapitk@iki.fi>
	* Fix hyphenation pattern for words starting with hyphen.

2011-07-05 Harri Pitkänen <hatapitk@iki.fi>
	* Fix hyphenation pattern for unknown words ending with hyphen.
	* Fix Python interface to work with Python 3.2.

2011-06-20 Harri Pitkänen <hatapitk@iki.fi>
	* Grammar checker: suggest replacing "yhdes" with "ensimmäinen"

2011-06-02 Harri Pitkänen <hatapitk@iki.fi>
	* Support COMPARISON in Malaga analyzer.

2011-05-19 Harri Pitkänen <hatapitk@iki.fi>
	* Handle embedded null input characters in Python and Java interfaces.

2011-05-07 Harri Pitkänen <hatapitk@iki.fi>
	* Support FOCUS in Malaga analyzer.

2011-05-05 Harri Pitkänen <hatapitk@iki.fi>
	* Support KYSYMYSLIITE in Malaga analyzer.

2011-04-16 Harri Pitkänen <hatapitk@iki.fi>
	* Support possessive suffixes in Malaga analyzer.

2011-03-31 Harri Pitkänen <hatapitk@iki.fi>
	* Support grammatical tense in Malaga analyzer.
	* Support participles in Malaga analyzer.
	* Increase version number to 3.3.

2011-03-19 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version number to 3.2.
	* Add Java files to source package.

2011-03-06 Harri Pitkänen <hatapitk@iki.fi>
	* Accept soft hyphen in Finnish spell checking if it is placed in a valid
	  hyphenation point.

2011-03-02 Harri Pitkänen <hatapitk@iki.fi>
	* Improve handling of punctuation and http URLs in tokenizer.

2011-02-22 Harri Pitkänen <hatapitk@iki.fi>
	* Add option --disable-extdicts that disables loading all external dictionaries.
	* Increase version number to 3.1.1.

2011-02-15 Ville-Pekka Vainio <vpivaini@cs.helsinki.fi>
	* Fix build with GCC 4.6

2011-01-23 Harri Pitkänen <hatapitk@iki.fi>
	* Fix internal error due to missing break in switch.

2010-12-08 Harri Pitkänen <hatapitk@iki.fi>
	* Add configure option --disable-testtools

2010-12-04 Harri Pitkänen <hatapitk@iki.fi>
	* Consistently return SPELL_FAILED instead of INTERNAL_ERROR
	  when too long word is spell checked.